--- a/css/style.css
+++ b/css/style.css
@@ -227,8 +227,4 @@
     background-color: rgb(80, 102, 128);
     transition: 1s all ease;
   }
-
-  .nightmode-nav-bar{
-    background-color: rgb(80, 102, 128);
-    transition: 1s all ease;
-  }
+  
